--- a/root/index.html
+++ b/root/index.html
@@ -33,10 +33,39 @@
             <div class="col-md-12">
                 <div class="time-block">
                     <div class="row">
-                        <div class="col-md-2 hour">6 AM</div>
+                        <div class="col-md-2 hour">7 AM</div>
                         <textarea class="col-md-8 desciption"></textarea>
                         <button class="col-md-2 saveBtn">Save</button>
                         </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">8 AM</div>
+                            <textarea class="col-md-8 description"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">9 AM</div>
+                            <textarea class="col-md-8 desciption"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button> 
+                        </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">10 AM</div>
+                            <textarea class="col-md-8 description"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">11 AM</div>
+                            <textarea class="col-md-8 desciption"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
 
                     </div>
                 </div>
