--- a/root/index.html
+++ b/root/index.html
@@ -31,20 +31,6 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <div class="time-block">
-                    <div class="row">
-                        <div class="col-md-2 hour">7 AM</div>
-                        <textarea class="col-md-8 desciption"></textarea>
-                        <button class="col-md-2 saveBtn">Save</button>
-                        </div>
-                    </div>
-                    <div class="time-block">
-                        <div class="row">
-                            <div class="col-md-2 hour">8 AM</div>
-                            <textarea class="col-md-8 description"></textarea>
-                            <button class="col-md-2 saveBtn">Save</button>
-                        </div>
-                    </div>
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">9 AM</div>
@@ -66,7 +52,48 @@
                             <button class="col-md-2 saveBtn">Save</button>
                         </div>
                     </div>
-
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">12 PM</div>
+                            <textarea class="col-md-8 desciption"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">1 PM</div>
+                            <textarea class="col-md-8 desciption"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">2 PM</div>
+                            <textarea class="col-md-8 desciption"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">3 PM</div>
+                            <textarea class="col-md-8 desciption"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">4 PM</div>
+                            <textarea class="col-md-8 desciption"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
+                    <div class="time-block">
+                        <div class="row">
+                            <div class="col-md-2 hour">5 PM</div>
+                            <textarea class="col-md-8 desciption"></textarea>
+                            <button class="col-md-2 saveBtn">Save</button>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
