added main tag to timeblocks

--- a/root/index.html
+++ b/root/index.html
@@ -28,6 +28,7 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+    <main>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -99,6 +100,7 @@
             </div>
         </div>
     </div>
+    </main>
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
