changed some headers

--- a/root/index.html
+++ b/root/index.html
@@ -24,8 +24,8 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <h1 class="display-3">Busy Body</h1>
+      <p class="lead">A simple calendar app to keep track of schedule!</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <main>
