--- a/root/index.html
+++ b/root/index.html
@@ -35,7 +35,7 @@
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">9 AM</div>
-                            <textarea class="col-md-8 desciption"></textarea>
+                            <textarea class="col-md-8 description"></textarea>
                             <button class="col-md-2 saveBtn">Save</button> 
                         </div>
                     </div>
@@ -49,49 +49,49 @@
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">11 AM</div>
-                            <textarea class="col-md-8 desciption"></textarea>
+                            <textarea class="col-md-8 description"></textarea>
                             <button class="col-md-2 saveBtn">Save</button>
                         </div>
                     </div>
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">12 PM</div>
-                            <textarea class="col-md-8 desciption"></textarea>
+                            <textarea class="col-md-8 description"></textarea>
                             <button class="col-md-2 saveBtn">Save</button>
                         </div>
                     </div>
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">1 PM</div>
-                            <textarea class="col-md-8 desciption"></textarea>
+                            <textarea class="col-md-8 description"></textarea>
                             <button class="col-md-2 saveBtn">Save</button>
                         </div>
                     </div>
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">2 PM</div>
-                            <textarea class="col-md-8 desciption"></textarea>
+                            <textarea class="col-md-8 description"></textarea>
                             <button class="col-md-2 saveBtn">Save</button>
                         </div>
                     </div>
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">3 PM</div>
-                            <textarea class="col-md-8 desciption"></textarea>
+                            <textarea class="col-md-8 description"></textarea>
                             <button class="col-md-2 saveBtn">Save</button>
                         </div>
                     </div>
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">4 PM</div>
-                            <textarea class="col-md-8 desciption"></textarea>
+                            <textarea class="col-md-8 description"></textarea>
                             <button class="col-md-2 saveBtn">Save</button>
                         </div>
                     </div>
                     <div class="time-block">
                         <div class="row">
                             <div class="col-md-2 hour">5 PM</div>
-                            <textarea class="col-md-8 desciption"></textarea>
+                            <textarea class="col-md-8 description"></textarea>
                             <button class="col-md-2 saveBtn">Save</button>
                         </div>
                     </div>
